[package]
authors     = [
    "Anton Dutov <anton.dutov@gmail.com>",
    "Alena Yuryeva <nimfetrisa@gmail.com>"
]
edition     = "2018"
license     = "MIT"
readme      = "README.md"
name        = "pop3-client"
version     = "0.0.3"
repository  = "https://github.com/anton-dutov/pop3-client-rs"
description = "Another pop3 client"
categories  = ["email"]
keywords    = ["mail", "pop3"]


[dependencies.rustls]
optional = true
version = "0.15"

[dependencies.webpki]
optional = true
version = "0.19"

[dependencies.webpki-roots]
optional = true
version = "0.16"

[features]
default = []
with-rustls = ["rustls", "webpki", "webpki-roots"]