[package]
authors     = [
    "Anton Dutov <anton.dutov@gmail.com>",
    "Alena Yuryeva <nimfetrisa@gmail.com>"
]
edition     = "2018"
license     = "MIT"
readme      = "README.md"
name        = "pop3-client"
version     = "0.1.0"
repository  = "https://github.com/anton-dutov/pop3-client-rs"
description = "Another pop3 client"
categories  = ["email"]
keywords    = ["mail", "pop3"]



[features]
default = []
with-encoding = ["encoding_rs"]
with-rustls   = ["rustls", "webpki", "webpki-roots"]


[dependencies]
bytes        = "1"
encoding_rs  = {version = "0.8", optional = true }
rustls       = {version = "0.19", optional = true }
webpki       = {version = "0.21", optional = true }
webpki-roots = {version = "0.21", optional = true }

